--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rpl-autoglaze",
+  "name": "rpl-konsultasi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,22 +8,27 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.6.1",
-    "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
-    "next": "13.0.4",
+    "eslint-config-next": "13.0.5",
+    "next": "13.0.5",
     "prisma": "^4.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.15",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
